# multimodal-anomaly-report-generation

./: .env.example  .gitignore  Dockerfile  MMAD.lnk  README.md  pyproject.toml  requirements-llm.txt  requirements.txt
Backend/: .env.example  README.md  init.sql  requirements.txt
Backend/app/: main.py
EDA/: MMAD_EDA.ipynb
Frontend/: .env.local  README.md  index.html  package-lock.json  package.json  vite.config.ts
Frontend/src/: vite-env.d.ts
apps/api/: main.py
apps/dashboard/: app.py  app_gradio.py
configs/: anomaly.yaml  eval.yaml  experiment.yaml  llm_eval.yaml  report_schema.json  runtime.yaml
docs/: experiment-runner.md
notebooks/jo/: winclip_postprocess.ipynb
notebooks/lee/: MMAD_EDA.ipynb  MMAD_Full_Structure_and_EDA.ipynb  MMAD_Path_Sanity.ipynb
notebooks/moon/: ALL_EfficientAd.ipynb  EDA.ipynb  EfficientAd.ipynb  Patchcore.ipynb  WinClip.ipynb  baseline.ipynb
notebooks/no/: ALL_EfficientAd.ipynb  EDA.ipynb
notebooks/son/: ALL_EfficientAd.ipynb  ALL_EfficientAd_LOCO_GoodsAD.ipynb  ALL_WinCLIP.ipynb  LLaVA_Report_GoodsAD_LOCO.ipynb  eval_qwen3vl_colab.ipynb  eval_run.ipynb
patchcore_training/: .gitignore  README.md
patchcore_training/config/: config.yaml  thresholds.yaml
patchcore_training/scripts/: evaluate.py  find_optimal_threshold.py  inference.py  train.py  visualize_comparison.py
patchcore_training/src/: __init__.py  dataset.py  evaluator.py  model.py  trainer.py  utils.py
scripts/: benchmark_inference.py  compare_results.py  convert_to_onnx.py  eval_llm_baseline.py  eval_mmad.py  eval_onnx.py  export_patchcore.py  predict_anomalib.py  run_ad_inference.py  run_ad_inference_ckpt.py  run_experiment.py  train.py  train_anomalib.py
src/anomaly/: __init__.py  anomalyclip_adapter.py  base.py  dummy_edge.py  efficientad_onnx.py  patchcore_onnx.py
src/common/: io.py
src/config/: __init__.py  experiment.py
src/datasets/: anomalib_folder_builder.py  dataloader.py  mmad_index_csv.py  preprocess.py
src/eval/: __init__.py  metrics.py
src/mllm/: __init__.py  base.py  claude_client.py  factory.py  gemini_client.py  internvl_client.py  llava_client.py  openai_client.py  qwen_client.py
src/service/: pipeline.py  settings.py
src/structure/: defect.py  render.py
src/utils/: __init__.py  checkpoint.py  device.py  loaders.py  log.py  path.py  wandbs.py
src/visual/: __init__.py  comparison.py  plot.py
(+44 files in other folders)
