[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmad-inspector"
version = "0.1.0"
description = "MMAD-style evaluation + anomaly inspection -> structured defect -> report pipeline (MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "pyyaml==6.0.2",
  "numpy==2.1.1",
  "opencv-python==4.10.0.84",
  "pillow==10.4.0",
  "streamlit==1.37.1",
  "python-multipart==0.0.9",
  "requests==2.32.3",
  "tqdm==4.66.5",
  "jsonschema==4.23.0",
  "jupyter>=1.1.1",
  "notebook>=7.5.3",
  "jupyterlab>=4.5.3",
  "ipykernel>=7.1.0",
  "ipython>=8.38.0",
  "ipywidgets>=8.1.8",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "python-dotenv>=1.2.1",
  "torch>=2.10.0",
  "anomalib>=2.2.0",
  "open-clip-torch>=3.2.0",
  "wandb>=0.24.2",
  "langchain>=0.3.27",
  "langchain-core>=0.3.83",
  "langchain-experimental>=0.3.4",
  "langchain-community>=0.3.27",
  "langchain-openai>=0.3.35",
  "langchain-anthropic>=0.3.22",
  "langchain-text-splitters>=0.3.11",
  "langchain-elasticsearch>=0.4.0",
  "langchain-chroma>=0.2.6",
  "langchain-cohere>=0.4.6",
  "langchain-milvus>=0.2.1",
  "langchain-google-genai>=2.1.12",
  "langchain-huggingface>=0.3.1",
  "langchain-azure-ai>=0.1.4",
  "langchain-teddynote>=0.5.4",
  "langchainhub>=0.1.21",
  "langgraph>=1.0.1",
  "langsmith>=0.6.9",
  "huggingface-hub>=1.3.4",
  "openai>=2.17.0",
  "deepl>=1.22.0",
  "kiwipiepy>=0.22.2",
  "konlpy>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
